--- a/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
+++ b/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
@@ -1,45 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/dialog_background">
 
     <!-- Email Input -->
     <EditText
         android:id="@+id/email_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your email"
-        android:inputType="textEmailAddress" />
+        android:layout_width="490dp"
+        android:layout_height="71dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="147dp"
+        android:hint="@string/enter_your_email"
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress"
+        android:textSize="20sp" />
 
     <!-- Send Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_button"
-        android:layout_width="wrap_content"
+        android:layout_width="129dp"
         android:layout_height="wrap_content"
-        android:text="Send"
         android:layout_below="@id/email_input"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginStart="495dp"
+        android:layout_marginTop="-60dp"
+        android:minHeight="60dp"
+        android:text="@string/send"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:iconTint="#FFC107"
+        android:backgroundTint="@android:color/holo_orange_light"/>
 
-    <!-- Cancel Button -->
+    <!-- Back Button -->
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/cancel_button"
+        android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
         android:layout_below="@id/email_input"
+        android:layout_marginStart="-300dp"
+        android:layout_marginTop="24dp"
         android:layout_toEndOf="@id/send_button"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+        android:minWidth="100dp"
+        android:minHeight="60dp"
+        android:text="@string/back"
+        android:backgroundTint="@android:color/darker_gray"/>
 
     <!-- Quit Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/quit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quit"
         android:layout_below="@id/email_input"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="345dp"
+        android:minWidth="100dp"
+        android:minHeight="60dp"
+        android:text="@string/quit"
+        android:textSize="16sp"
+        android:backgroundTint="@android:color/holo_red_dark"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="617dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="50dp"
+        android:fontFamily="monospace"
+        android:text="@string/send_a_copy_of_your_chat_log"
+        android:textAlignment="center"
+        android:textSize="34sp" />
 </RelativeLayout>
