--- a/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
+++ b/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
@@ -8,8 +8,8 @@
     <!-- Email Input -->
     <EditText
         android:id="@+id/email_input"
-        android:layout_width="490dp"
-        android:layout_height="71dp"
+        android:layout_width="459dp"
+        android:layout_height="66dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
@@ -20,36 +20,38 @@
         android:textSize="20sp" />
 
     <!-- Send Button -->
+
+    <!-- Back Button -->
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_button"
-        android:layout_width="129dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/email_input"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="495dp"
-        android:layout_marginTop="-60dp"
+        android:layout_marginStart="487dp"
+        android:layout_marginTop="-64dp"
+        android:backgroundTint="@android:color/holo_orange_light"
         android:minHeight="60dp"
         android:text="@string/send"
         android:textAlignment="center"
         android:textSize="16sp"
-        app:iconTint="#FFC107"
-        android:backgroundTint="@android:color/holo_orange_light"/>
+        app:iconTint="#FFC107" />
 
-    <!-- Back Button -->
+    <!-- Quit Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/email_input"
-        android:layout_marginStart="-300dp"
+        android:layout_marginStart="-268dp"
         android:layout_marginTop="24dp"
         android:layout_toEndOf="@id/send_button"
+        android:backgroundTint="@android:color/darker_gray"
         android:minWidth="100dp"
         android:minHeight="60dp"
-        android:text="@string/back"
-        android:backgroundTint="@android:color/darker_gray"/>
+        android:text="@string/back" />
 
-    <!-- Quit Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/quit_button"
         android:layout_width="wrap_content"
