--- a/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
+++ b/ChatBotApp/app/src/main/res/layout/dialog_chat.xml
@@ -8,7 +8,7 @@
     <!-- Email Input -->
     <EditText
         android:id="@+id/email_input"
-        android:layout_width="459dp"
+        android:layout_width="425dp"
         android:layout_height="66dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -23,14 +23,16 @@
 
     <!-- Back Button -->
 
+    <!-- Quit Button -->
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_button"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/email_input"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="487dp"
-        android:layout_marginTop="-64dp"
+        android:layout_marginStart="450dp"
+        android:layout_marginTop="-65dp"
         android:backgroundTint="@android:color/holo_orange_light"
         android:minHeight="60dp"
         android:text="@string/send"
@@ -38,7 +40,6 @@
         android:textSize="16sp"
         app:iconTint="#FFC107" />
 
-    <!-- Quit Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
         android:backgroundTint="@android:color/darker_gray"
         android:minWidth="100dp"
         android:minHeight="60dp"
-        android:text="@string/back" />
+        android:text="@string/back"
+        android:textSize="16sp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/quit_button"
