--- a/ChatBotApp/app/src/main/res/values/styles.xml
+++ b/ChatBotApp/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
     </style>
+
+    <style name="DialogTheme" parent="Theme.MaterialComponents.Light.Dialog">
+
+    </style>
 </resources>
